Fix quote cutoff on random page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -65,3 +65,6 @@
 
   .cell--s
     max-width: 64em
+
+  .well--l
+    margin-bottom: $b-space-xl
